# bibanon-packer

./: Cargo.toml
assets/: glyph.afdesign  thumbnailtemplate.afdesign
src/: api.rs  main.rs  thumb.rs
wiki-page/: index.md  meta.toml  mod.toml  section.md
wiki-page/aaaa/: index.md  meta.toml
wiki-page/waaaaaa/: aaa.md  index.md  meta.toml
